--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@
 # .idea/modules.xml
 # .idea/*.iml
 # .idea/modules
-# *.iml
+*.iml
 # *.ipr
 
 # CMake
@@ -76,8 +76,17 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-.cpcache
+.cpcache/
+.devcontainer/
 
 resources/
 
 .nrepl-port
+/scripts/
+
+# clj-kondo cache
+.clj-kondo/
+
+# Copilot data migration files
+.idea/copilot.data.migration.*
+.idea/clj-kondo.xml
